<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.couponts.data.database.entities.CouponEntity"/>
        <variable
            name="viewModel"
            type="com.example.couponts.ui.home.viewmodel.CouponViewModel" />
        <variable
            name="isActive"
            type="boolean" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/common_padding_xlange"
        android:paddingVertical="@dimen/common_padding_default"
        tools:context=".ui.home.view.MainActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textAlignment="center"
            textTitle="@{isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConsult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_consult"
            android:onClick="@{() -> viewModel.getCouponByCode()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCreate"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_Create"
            android:onClick="@{() -> viewModel.saveCoupont()}"
            tools:visibility="visible"
            app:isGone="@{isActive}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnConsult"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_coupon"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/msg_hint_coupon"
            android:layout_marginTop="@dimen/space_8dp"
            android:layout_marginBottom="@dimen/space_16dp"
            app:layout_constraintTop_toBottomOf="@id/ti_descrition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnConsult"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text ="@={viewModel.coupon.code}"
                android:contentDescription="@string/msg_hint_coupon"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_descrition"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:hint="@{isActive ? @string/hint_active : @string/msg_hint_description}"
            android:enabled="@{!isActive}"
            app:endIconMode="clear_text"
            android:layout_marginTop="@dimen/space_16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ti_coupon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/msg_hint_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:text="@={viewModel.coupon.description}"
                tools:text="Cupón válido por 10% en compras mayores a 10 USD"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>